tests/error/func_error_scan2.gw
#! [contains] unknown type
fun void test() { skfuv sd; }
